--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "kitt-js",
-  "version": "0.0.1",
+  "name": "kittJS",
+  "version": "0.0.2",
   "description": "轻量级JS开发框架",
   "author": "王鹏",
   "email": "786601349@qq.com",
   "main": "index.js",
   "dependencies": {
+    "async": "^2.0.0-rc.4",
     "body-parser": "^1.15.1",
     "caller-id": "^0.1.0",
     "cloudinary": "^1.3.1",
     "compression": "^1.6.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
+    "debug": "^2.2.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "grappling-hook": "^3.0.0",
@@ -22,7 +24,7 @@
     "method-override": "^2.3.5",
     "mongodb": "^2.1.18",
     "morgan": "^1.7.0",
-    "multer": "^1.1.0",
+    "multer": "^0.1.8",
     "object-assign": "^4.1.0",
     "orm": "^3.0.0",
     "randomkey": "^1.0.0",
@@ -40,5 +42,4 @@
     "url": "https://github.com/kittBoy/kitt.git"
   },
   "license": "MIT"
-
 }
